--- a/css/geek-egret.css
+++ b/css/geek-egret.css
@@ -612,6 +612,13 @@ pre code {
   text-decoration: none;
   color: #0085a1;
 }
+.post-preview > a > .post-preview-img {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
 .post-preview > a > .post-title {
   font-size: 21px;
   line-height: 1.3;
