--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -494,6 +494,13 @@ pre code{
 			text-decoration: none;
 			color: @brand-primary;
 		}
+		> .post-preview-img {
+			width: 100%;
+			max-width: 800px;
+			height: auto;
+			border-radius: 8px;
+			margin-bottom: 1rem;
+		}
 		> .post-title {
 			font-size: 21px;
 			line-height: 1.3;
