--- a/css/geek-egret.css
+++ b/css/geek-egret.css
@@ -613,6 +613,9 @@ pre code {
   color: #0085a1;
 }
 .post-preview > a > .post-preview-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   max-width: 400px;
   height: auto;
