--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -495,11 +495,12 @@ pre code{
 			color: @brand-primary;
 		}
 		> .post-preview-img {
+			display:block;
+			margin:0 auto;
 			width: 100%;
-			max-width: 400px;
+			max-width: 500px;
 			height: auto;
 			border-radius: 8px;
-			margin-bottom: 1rem;
 		}
 		> .post-title {
 			font-size: 21px;
