update README.md and publish 2025-2-3 post

--- a/less/geek-egret.less
+++ b/less/geek-egret.less
@@ -496,11 +496,14 @@ pre code{
 		}
 		> .post-preview-img {
 			display:block;
-			margin:0 auto;
-			width: 100%;
-			max-width: 500px;
-			height: auto;
-			border-radius: 8px;
+  			margin-top: 15px;
+  			margin-right: auto;
+  			margin-bottom: 15px;
+ 			margin-left: auto;
+  			width: 100%;
+  			max-width: 500px;
+  			height: auto;
+  			border-radius: 8px;
 		}
 		> .post-title {
 			font-size: 21px;
