--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -134,9 +134,9 @@ layout: default
                             </li>
                             {% endif %}
                             <!-- add bilibili add target = "_blank" to <a> by BY -->
-                            {% if site.bilibili_username %}
+                            {% if site.bilibili_uid %}
                             <li>
-                                <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}">
+                                <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_uid }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa  fa-stack-1x fa-inverse">B</i>
