--- a/css/geek-egret.css
+++ b/css/geek-egret.css
@@ -614,7 +614,10 @@ pre code {
 }
 .post-preview > a > .post-preview-img {
   display:block;
-  margin:0 auto;
+  margin-top: 15px;
+  margin-right: auto;
+  margin-bottom: 15px;
+  margin-left: auto;
   width: 100%;
   max-width: 500px;
   height: auto;
